llvm/test/gcd2.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/test/gcd2.llvm:15:1: error: expected instruction opcode
}
^
